5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1670_1396.log
== TEST (2019-04-16 18:17:01) 
-- CODE:
valor=float(input("diga o valor:"))
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:13) 
-- CODE:
valor=float(input("diga o valor:"))
if =< 300
print 10%300
-- ERROR:
File "XXXX", line 2
    if =< 300
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:35) 
-- CODE:
valor=float(input("diga o valor:"))
if =< 300
print(10%300)
-- ERROR:
File "XXXX", line 2
    if =< 300
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:37) 
-- CODE:
valor=float(input("diga o valor:"))
if =< 300:
print(10%300)
else:
	6%300
-- ERROR:
File "XXXX", line 2
    if =< 300:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:57) 
-- CODE:
valor=float(input("diga o valor:"))
if =< 300:
print(10%300)
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if =< 300:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:58) 
-- CODE:
valor=float(input("diga o valor:"))
if =< 300:
print(10%300)
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if =< 300:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:58) 
-- CODE:
valor=float(input("diga o valor:"))
if =< 300:
print(10%300)
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if =< 300:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:22) 
-- CODE:
valor=float(input("diga o valor:"))
if ==< 300:
print(10%300)
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if ==< 300:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:23) 
-- CODE:
valor=float(input("diga o valor:"))
if ==< 300:
print(10%300)
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if ==< 300:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:34) 
-- CODE:
valor=float(input("diga o valor:"))
if ==< 300:
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if ==< 300:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:50) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:51) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:51) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:51) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:52) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:52) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:53) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:54) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:54) 
-- CODE:
valor=float(input("diga o valor:"))
if (==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (==< 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:08) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:09) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:10) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:10) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:10) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:11) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:11) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:12) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
(valor+300%10)
print()
else:
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:19) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:20) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:20) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:20) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:21) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(6%300)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:30) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor==< 300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(y)
-- ERROR:
File "XXXX", line 2
    if (valor==< 300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:01) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor<==300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(y)
-- ERROR:
File "XXXX", line 2
    if (valor<==300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:02) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor<==300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(y)
-- ERROR:
File "XXXX", line 2
    if (valor<==300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:02) 
-- CODE:
valor=float(input("diga o valor:"))
if (valor<==300):
x=(valor+300%10)
print(x)
else:
y=(valor+300%6)
print(y)
-- ERROR:
File "XXXX", line 2
    if (valor<==300):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
